--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "url": ""
   },
   "files": [
-    "lib",
-    "src"
+    "lib"
   ],
   "license": "MIT",
   "scripts": {
@@ -33,11 +32,9 @@
     "prettier": "prettier --write src",
     "test": "vitest ./src/test/index.test.ts"
   },
-  "dependencies": {
-    "@anlib/ts-config": "^1.0.1",
-    "ts-node": "^10.9.1"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "aa": "^0.0.1",
     "@anlib/eslint-config-ts": "^1.0.4",
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.19.4",
@@ -53,6 +50,7 @@
     "prettier": "^2.7.1",
     "rollup": "^2.79.1",
     "tslib": "^2.4.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vitest": "^0.26.3"
   }
