--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "sqlite-orm",
-  "version": "0.0.1",
+  "name": "@anlib/sqlite-orm",
+  "version": "0.0.4",
   "type": "module",
-  "types": "lib/index.d.ts",
-  "description": "",
+  "types": "lib/src/index.d.ts",
+  "description": "一个简单的 sqlite orm",
   "main": "lib/bundle.cjs.js",
   "jsnext:main": "lib/bundle.esm.js",
   "module": "lib/bundle.esm.js",
   "browser": "lib/bundle.browser.js",
   "amd": "lib/bundle.amd.js",
-  "homepage": "",
-  "bugs": {},
+  "homepage": "https://github.com/yang-Ann/sqlite-orm",
+  "bugs": {
+    "url": "https://github.com/yang-Ann/sqlite-orm/issues"
+  },
   "keywords": [
     "sqlite",
     "orm"
@@ -18,7 +20,7 @@
   "author": "An <331536495@qq.com> (https://ann-yang.gitee.io/note-sites/)",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/yang-Ann/sqlite-orm"
   },
   "files": [
     "lib"
@@ -30,11 +32,11 @@
     "dev:nodemon": "nodemon --watch ./dist ./dist/index.js",
     "lint": "eslint src --ext .ts",
     "prettier": "prettier --write src",
+    "release": "bumpp -r",
     "test": "vitest ./src/test/index.test.ts"
   },
   "dependencies": {},
   "devDependencies": {
-    "aa": "^0.0.1",
     "@anlib/eslint-config-ts": "^1.0.4",
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.19.4",
@@ -45,12 +47,13 @@
     "@rollup/plugin-typescript": "^8.5.0",
     "@types/babel__core": "^7.1.19",
     "@types/node": "^18.11.18",
+    "bumpp": "^9.2.0",
     "eslint": "^8.25.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "rollup": "^2.79.1",
-    "tslib": "^2.4.0",
     "ts-node": "^10.9.1",
+    "tslib": "^2.4.0",
     "typescript": "^4.9.3",
     "vitest": "^0.26.3"
   }
